# ThreadPools

./: .gitignore  Build.bat  CMakeLists.txt  LICENSE  README.md
Include/: Jobs.h  Literals.h  Locking.h  Semaphore.h  Utility.h
Source/: CMakeLists.txt  Futex.cpp  Jobs.cpp  Locking.cpp  Utility.cpp
Source/Tests/: CMakeLists.txt  Main.cpp
